--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Samarth's blog
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Life is like a box of chocolates, you never know what you gonna get!
 
 # --- Navigation bar options --- #
 
