--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://sbachkheti.github.io"
+url: "http://username.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -43,52 +43,53 @@ avatar: "/img/avatar-icon.png"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
-  email: "youremail@domain.com"
-  facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
-  twitter: yourname   # eg. daattali
-  reddit: yourname    # eg. daattali
-  google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
-  linkedin: yourname  # eg. daattali
-  xing: yourname      # eg. daattali
-  stackoverflow: yourlink  # eg. "3943160/daattali"
-  snapchat: yourname  # eg. daattali
-  instagram: yourname # eg. daattali
-  youtube: yourlink   # eg. user/daattali or channel/daattali
-  spotify: yourname   # eg. daattali
-  telephone: yourphone   # eg. +14159998888
-  steam: yourname     # eg. daattali
-  twitch: yourname    # eg. daattali
-  yelp: yourname      # eg. daattali
+  name: Samarth Bachkheti
+  email: "sbachkheti@gmail.com"
+  facebook: "https://www.facebook.com/samarth.bachkheti"  # eg. daattali
+  github: sbachkheti    # eg. daattali
+#  twitter: yourname   # eg. daattali
+#  reddit: yourname    # eg. daattali
+#  google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
+#  linkedin: yourname  # eg. daattali
+#  xing: yourname      # eg. daattali
+#  stackoverflow: yourlink  # eg. "3943160/daattali"
+#  snapchat: yourname  # eg. daattali
+#  instagram: yourname # eg. daattali
+#  youtube: yourlink   # eg. user/daattali or channel/daattali
+#  spotify: yourname   # eg. daattali
+#  telephone: yourphone   # eg. +14159998888
+#  steam: yourname     # eg. daattali
+#  twitch: yourname    # eg. daattali
+#  yelp: yourname      # eg. daattali
 
 # Select which links to show in the footer
 footer-links-active:
-  rss: false
+#  rss: false
   facebook: true
   email: true
-  twitter: true
-  google-plus: false
+#  twitter: true
+#  google-plus: false
   github: true
-  reddit: false
-  linkedin: false
-  xing: false
-  stackoverflow: false
-  snapchat: false
-  instagram: false
-  youtube: false
-  spotify: false
-  telephone: false
-  steam: false
-  twitch: false
-  yelp: false
+#  reddit: false
+#  linkedin: false
+#  xing: false
+#  stackoverflow: false
+#  snapchat: false
+#  instagram: false
+#  youtube: false
+#  spotify: false
+#  telephone: false
+#  steam: false
+#  twitch: false
+#  yelp: false
 
 # Select which share links to show in posts
 share-links-active:
-  twitter: true
+#  twitter: true
   facebook: true
   google: false
-  linkedin: true
+  github: true
+#  linkedin: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
