--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,6 @@ avatar: "/img/universe-backgrounds1 Cropped.jpg"
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
 # title-img: /path/to/image
-title-img: "/img/Earth'sMagnetic01 Cropped.jpg"
 # --- Footer options --- #
 
 # Change all these values or delete the ones you don't want.
@@ -93,7 +92,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "sbachkheti.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
