--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ description: Life is like a box of chocolates, you never know what you gonna get
 navbar-links:
   About Me: "aboutme"
   Resources:
-#    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-#    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
+    - Receiver Function Analysis: "https://github.com/sbachkheti/Receiver-function-Analysis"
+    - Bayesian Inference: "https://github.com/sbachkheti/Bayesian-Inference-to-segment-a-well-log"
+    - Wavelet Extraction: "https://github.com/sbachkheti/synthetic-seismogram-generation-and-Wavelet-Extraction"
 #  Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
