--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ navbar-links:
     - Receiver Function Analysis: "https://github.com/sbachkheti/Receiver-function-Analysis"
     - Bayesian Inference: "https://github.com/sbachkheti/Bayesian-Inference-to-segment-a-well-log"
     - Wavelet Extraction: "https://github.com/sbachkheti/synthetic-seismogram-generation-and-Wavelet-Extraction"
-#  Author's home: "http://deanattali.com"
+  Cogitation: "http://sbachkheti.github.io/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
