--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Samarth's blog
+title: Samarth Bachkheti
 
 # Short description of your site
 description: Life is like a box of chocolates, you never know what you gonna get!
