--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Samarth Bachkheti
 
 # Short description of your site
-description: Life is like a box of chocolates, you never know what you gonna get!
+#description: Life is like a box of chocolates, you never know what you gonna get!
 
 # --- Navigation bar options --- #
 
