--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Samarth Bachkheti
+title: _Samarth Bachkheti_
 
 # Short description of your site
 description: Earth Science
